--- a/static/sass/cards/_card-2.scss
+++ b/static/sass/cards/_card-2.scss
@@ -6,7 +6,7 @@
         border-bottom: 1px solid $grey4;
         padding-bottom: 15px;
         margin-bottom: 15px;
-        height: 350px;
+        // height: 350px;
 
         &__media {
             margin-bottom: 15px;
