--- a/article.twig
+++ b/article.twig
@@ -226,7 +226,7 @@
                                     <div class='col-12 col-lg-8'>
                                         <div class="c-article__top-container">
                                             <div class="c-article__category-wrap">
-                                                {% if article.label != article.blog.title %}
+                                                {% if article.label != article.blog.title and config['additional-label'] == true %}
                                                     <div class="c-article__additional-category">
                                                         {{article.label}}
                                                     </div>
